package ch.phildev.springphawtrix.app.management;

public interface PhawtrixApp {

    AppRegistration getAppRegistration();
}
